--- a/webpage.html
+++ b/webpage.html
@@ -12,7 +12,7 @@
             <a class="active" href="webpage.html">Hem</a>
             <a href="">Bakgrund</a>
             <a href="">Fritid</a>
-            <a href="">Framtid</a>
+            <a href="">Framti</a>
         </div>
         <div class="paragraph">
             <br>
