--- a/webpage.html
+++ b/webpage.html
@@ -7,19 +7,24 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>Jonathan Wåger</h1>
+        <br><br><br><br><br>
+        <h1>Min Sida</h1><br>
         <div class="topNav">
-            <a class="active" href="webpage.html">Hem</a>
-            <a href="">Bakgrund</a>
-            <a href="">Fritid</a>
-            <a href="">Framtid</a>
+            <a class="active" href="#">Hem</a>
+            <a href="game.html">Spel</a>
+            <a href="quiz.html">Quiz</a>
+            <a href="formulär.html">Formulär</a>
         </div>
         <div class="paragraph">
-            <br>
-            <img src="Jonathan.jpg" alt="Jag" style='float: left;'>
-            <p>Hej, mitt namn är Jonathan och jag hade tänkt att presentera mig lite kort</p>
-            <p>Denna webbplats är skapad för att ge en introduktion till vem jag är.</p>
-            <p>Jag har delat upp min introduktion till olika sidor som du säkert kan se i navigationsbaren.</p>
+            <p>Hej, mitt namn är Jonathan och välkommen till min sida</p>
+            <p>Denna sida har inte något tema men det finns iallafall <br>
+               någonting att göra. Du har ett spel som du kan spela,<br>
+               annars finns det ett formulär där du ombedds att skriva in<br>
+               vissa uppgifter och sen finns det en sektion som är till <br>
+               för att räkna.
+            </p>
+
+            <p>Hoppas du har en underbar tid här!</p>
         </div>
     </body>
 </html>
