--- a/formulär.html
+++ b/formulär.html
@@ -11,7 +11,7 @@
         <h1>Formulär</h1><br>
         <div class="topNav">
             <a href="webpage.html">Hem</a>
-            <a href="game.html">Spel</a>
+            <a href="table.html">Table</a>
             <a href="quiz.html">Quiz</a>
             <a class="active" href="#">Formulär</a>
         </div>
@@ -30,9 +30,9 @@
             <h2>Räkna</h2>
             <form name="form2" id="form2" action="#">
                 <label for="från">Från:</label><br>
-                <input type="text" name="från" id="från"><br><br>
+                <input type="text" name="från1" id="från"><br><br>
                 <label for="till">Till:</label><br>
-                <input type="text" name="till" id="till"><br><br>
+                <input type="text" name="till1" id="till"><br><br>
                 <input type="button" name="skicka" value="Skicka" onclick="myFunction2()" />
             </form>
             <p id="paragraph3"></p>
