--- a/quiz.html
+++ b/quiz.html
@@ -12,13 +12,15 @@
         <h1>Quiz</h1><br>
         <div class="topNav">
             <a href="webpage.html">Hem</a>
-            <a href="game.html">Spel</a>
+            <a href="table.html">Table</a>
             <a class="active" href="#">Quiz</a>
             <a href="formulär.html">Formulär</a>
         </div>
+        <br><br>
+        <p>Du ska ge den svenska namnet på tavlorna i textfältet nedan.</p>
         <h2 id="poäng">0</h2>
         <br><br>
-        <div class="form">
+        <div class="form1">
             <div class="gallery">
                 <a target="_blank" href="Tavla1.jpg">
                   <img src="Tavla1.jpg" alt="Tavla1" width="600" height="400">
@@ -111,7 +113,7 @@
             </div>
             <br>
             <script class="text/javascript" src="test.js"></script>
-        </div>
+        </section>
         <a href="quiz.html">
             <button class="btn">Reset</button>
         </a>
