--- a/webpage.html
+++ b/webpage.html
@@ -11,17 +11,17 @@
         <h1>Min Sida</h1><br>
         <div class="topNav">
             <a class="active" href="#">Hem</a>
-            <a href="game.html">Spel</a>
+            <a href="table.html">Table</a>
             <a href="quiz.html">Quiz</a>
             <a href="formulär.html">Formulär</a>
         </div>
         <div class="paragraph">
             <p>Hej, mitt namn är Jonathan och välkommen till min sida</p>
             <p>Denna sida har inte något tema men det finns iallafall <br>
-               någonting att göra. Du har ett spel som du kan spela,<br>
+               någonting att göra. Du har ett table,<br>
                annars finns det ett formulär där du ombedds att skriva in<br>
                vissa uppgifter och sen finns det en sektion som är till <br>
-               för att räkna.
+               för att räkna. Sen finns det ett quiz.
             </p>
 
             <p>Hoppas du har en underbar tid här!</p>
