--- a/formulär.html
+++ b/formulär.html
@@ -10,7 +10,7 @@
         <br><br><br><br><br>
         <h1>Formulär</h1><br>
         <div class="topNav">
-            <a href="webpage.html">Hem</a>
+            <a href="index.html">Hem</a>
             <a href="table.html">Table</a>
             <a href="quiz.html">Quiz</a>
             <a class="active" href="#">Formulär</a>
