--- a/quiz.html
+++ b/quiz.html
@@ -11,7 +11,7 @@
         <br><br><br><br><br>
         <h1>Quiz</h1><br>
         <div class="topNav">
-            <a href="webpage.html">Hem</a>
+            <a href="index.html">Hem</a>
             <a href="table.html">Table</a>
             <a class="active" href="#">Quiz</a>
             <a href="formulär.html">Formulär</a>
