--- a/table.html
+++ b/table.html
@@ -12,7 +12,7 @@
             <h1>Table</h1><br>
         </header>
         <div class="topNav">
-            <a href="webpage.html">Hem</a>
+            <a href="index.html">Hem</a>
             <a class="active" href="#">Table</a>
             <a href="quiz.html">Quiz</a>
             <a href="formulär.html">Formulär</a>
